--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "keywords": ["discord","discordbot","statusbot","livestatusbot"],
     "author": "HJGAMING",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "@discordjs/rest": "^2.3.0",
         "anticrash": "^1.1.0",
